remove buildscript section
move plugin xml files to resources

Add test java arguments

Fix xmx and xms values

Use separate gradle files for each module

Exclude provided libraries from distribution

use the same source sets for all subprojects

Fix zip layout

Use gradle on travis

Fix zip layout